<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:background="@color/colorBlueGreyBackground"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_home_logo" />

    <TextView
        style="@style/AppTheme.TextView.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/signup_others_tagline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_search_friends"
            style="@style/AppTheme.TextView.BlueGrey"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:elevation="12dp"
            android:text="@string/signup_search_friends"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_add_bank"
            style="@style/AppTheme.TextView.BlueGrey"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:elevation="12dp"
            android:text="@string/signup_add_bank"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_add_credit_card"
            style="@style/AppTheme.TextView.BlueGrey"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:elevation="12dp"
            android:text="@string/signup_add_credit_card"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_skip"
            style="@style/AppTheme.TextView.Big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/skip_this"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
