<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lftechnology.hamropay.activities.InviteFriend">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/edt_enter_invite_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_number"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/warmGrey"
                android:textSize="@dimen/text_size_heading" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/edt_enter_invite_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/message"
                android:imeOptions="actionDone"
                android:maxLength="200"
                android:maxLines="2"
                android:textColor="@android:color/black"
                android:textColorHint="@color/warmGrey" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/standard_rate"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_send_invitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_corner_bluegrey_button"
        android:text="@string/send_invitation"
        android:textColor="@android:color/white" />


</RelativeLayout>
