<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueGreyBackground"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_home_logo" />

    <TextView
        android:id="@+id/tv_sign_up_photo_tagline"
        style="@style/AppTheme.TextView.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/civ_profilepic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:src="@drawable/rounded_camera"
            app:border="false"
            app:border_width="0dp"
            app:shadow="false" />

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_camera" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_sign_up_photo_hint"
        style="@style/AppTheme.TextView.BlueGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/iv_camera"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center"
        android:text="@string/signup_photo_hint"
        android:textColor="#73efeff4"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_continue"
            style="@style/AppTheme.TextView.BlueGrey"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/tv_sign_up_photo_hint"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:elevation="12dp"
            android:text="@string/signup_button"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sign_up_photo_skip"
            style="@style/AppTheme.TextView.Tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/skip_this"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
